--- a/css/custom.css
+++ b/css/custom.css
@@ -95,9 +95,24 @@ li {
 
  .sec-8{
  	background-image:url('../images/bk1.png');
- 	opacity: 0.7;
+
+ 	/*opacity: 0.7;*/
 	/*background-position: left;*/
  }
+
+#goc 
+{
+	margin-top: 3%;
+}
+
+#cs{
+	color: #FA9B27;
+	font-family: a Abrushow;
+font-style: normal;
+font-weight: normal;
+line-height: 43px;
+letter-spacing: 0.04em;
+}
 
  #imgrotate img{
  	transform: rotate(-13deg) !important;
@@ -110,6 +125,13 @@ top: 4445.14px;
  .ora-text{
    color: #FA9B27;
    background-color: #F5F5F5;
+   font-family: a Abrushow;
+font-style: normal;
+font-weight: normal;
+line-height: 43px;
+letter-spacing: 0.04em;
+padding: 5px;
+padding-left: 11px;
  }
  .wel {
 	 /*width:50%;*/
@@ -215,9 +237,12 @@ letter-spacing: 0.04em;
 }
 .img-sec2 {
 	padding: 30px 70px;
+	
 }
-.img-sec2>img {
-	width:80%;
+.img-sec2 img {
+	/*width:80%;*/
+	width: 219px;
+height: 40px;
 }
 .set-width {
 	width:70%;
@@ -244,7 +269,7 @@ letter-spacing: 0.04em;
 		border-bottom-right-radius: 10px;
 		border-top-left-radius: 5px;
 		border-bottom-left-radius: 5px;
-		border-color: #ab06ca;
+		border-color: #254C84;
 		background-color: #ded4e3;
 		    font-size: 2.7rem;
     text-align: center;
@@ -265,11 +290,15 @@ letter-spacing: 0.04em;
 	    background-color: #c7c1ca66;
 }
 .gra-text {
-	font-size: 23px;
+	font-size: 30px;
+line-height: 43px;
 	background: -webkit-linear-gradient(#0E2B55, #0069FF);
     -webkit-background-clip: text;
-    font-weight: 700;
-    font-family: chocolate-bar-demo-regular;
+    /*font-weight: 700;*/
+    /*text-align: center;*/
+    /*font-family: chocolate-bar-demo-regular;*/
+    font-family: a Abrushow;
+    letter-spacing: 0.04em;
     -webkit-text-fill-color: transparent;
 	
 }
@@ -279,10 +308,11 @@ letter-spacing: 0.04em;
 }
 .gra-text-p{
 	
-	font-size:28px;
-	color:#000; 	
-	font-family: 'Georama-VariableFont_wdth';
-    font-weight: 600;
+	font-size: 20px;
+line-height: 34px;
+	color:#343434; 	
+	font-family: Lato;
+    /*font-weight: 600;*/
 }
 .dot {
     position: absolute;
@@ -424,6 +454,7 @@ letter-spacing: 0.04em;
 }
 .mb-5 {
 	margin-bottom:5%;
+	margin-top: 5%;
 }
 /*-----------------------Flag Css-------------------*/
 
