--- a/css/custom.css
+++ b/css/custom.css
@@ -94,7 +94,7 @@ li {
  }
 
  .sec-8{
- 	background-image:url('../images/bk1.png');
+ 	background-image:url('../images/bg1.png');
 
  	/*opacity: 0.7;*/
 	/*background-position: left;*/
