--- a/css/custom.css
+++ b/css/custom.css
@@ -36,6 +36,7 @@
 
 .navbar {
 	border-radius: 0px !important;
+	margin-bottom: 0px !important;
 }
 .navbar-inverse {
     background-color: #0E1E34;
@@ -243,8 +244,6 @@ margin-top: 2%;
 font-weight: normal;*/
 font-size: 40px;
 line-height: 43px;
-/* identical to box height */
-
 /*text-align: center;*/
 letter-spacing: 0.04em;
 
