--- a/css/custom.css
+++ b/css/custom.css
@@ -360,7 +360,7 @@ line-height: 34px;
 	padding-bottom:5%;
 }
 .htb-text {
-    font-size: 15px;
+    font-size: 16px;
     color: #000;
     display: flex;
     font-family: Lato;
@@ -969,28 +969,30 @@ border-radius: 24px;
 letter-spacing: 0.05em;
 }
 .card-text li{
- padding: 5px;
+ padding: 8px;
 }
 
 .card-text{
 	padding-left: 60px;
     margin-left: 30px;
+    padding-top: 15px;
+    padding-bottom: 5px;
 }
 
 .card-header {
 border-radius: 20px;
-  font-family: a Abrushow;
+font-family: a Abrushow;
 font-style: normal;
 font-weight: normal;
 font-size: 28px;
 line-height: 51px;
 letter-spacing: 0.04em;
 text-transform: capitalize;
-  background: #DCDCDC;
-  color: #FA9B27;
+background: #DCDCDC;
+color: #FA9B27;
 text-align: center;
 
  transform-origin: 0 0;
   transform: rotate(270deg);
-  width: 160px;
+  width: 210px;
 }
