--- a/css/custom.css
+++ b/css/custom.css
@@ -551,6 +551,12 @@ padding: 16px 28px;
 	margin-bottom: 3%;
 }
 
+#puppy
+{
+    position: relative;
+    z-index: 10;	
+}
+
 .secfq
 {
 	margin-bottom: 3%;
@@ -742,297 +748,73 @@ text-align: center;
 		margin-left: -28%;
 	}
 }*/
-@media only screen and (max-width: 320px) {
-	.sec-1 {
-    padding-top: 32%;
-	}
-	.wel-pup {
-		font-size: 15px;
-	}
-	.wel-para {
-    font-size: 12px;
-   
-	}
+
+
+/*Media Query*/
+@media only screen and (max-width: 600px)
+{
 	.navbar-brand>img {
     display: block;
     width: 55%;
-    margin-top: -23px;
-}
-	.btn-p {
-    padding: 3%;
-	}
-	.so-text {
-    font-size: 15px;
-	}
-	.wel-btn {
-		    padding-top: 5px;
-	}
-		.fa , .fab{
-    position: initial;
-    font-size: 15px;
-	}
-	.footer-icon {
-    padding: 5px;
-	margin-right: 2%;
-	}
-	.mobile-res{
-		padding-top:10%;
-	}
-	::placeholder { 
-  
-		font-size: 15px;
-	}
-	.sd-img {
-    width: 20%;
-	}
-	
 }
 
-@media only screen and (max-width: 376px) {
-	.sec-1 {
-    padding-top: 32%;
+/*#welcol{
+	text-align: center;
+}
+*/
+	#welimg{
+		height: 200px;
+		display: block;
+  margin-left: auto;
+  margin-right: auto;
 	}
+
 	.wel-pup {
-		font-size: 15px;
-	}
-	.wel-para {
-    font-size: 12px;
-   
-	}
-	.btn-p {
-    padding: 3%;
-	}
-	.so-text {
-    font-size: 15px;
-	}
-	.wel-btn {
-		    padding-top: 5px;
-	}
-	
-	.fa , .fab{
-    position: initial;
-    font-size: 20px;
-	}
-	.mobile-res {
-    padding-top: 10%;
-	}
-	::placeholder { 
-  
+		text-align: center;
 		font-size: 20px;
 	}
-	.sd-img {
-    width: 20%;
-	}
 
-	.copyright-text, .privacy {
+	.wel-para, .wel-para1, .wel-btn {
 		text-align: center;
-		float: none;
+		font-size: 15px;
 	}
-	
-	/*.footer-icon {
-    padding: 10px;
-	    margin-right: 2%;
-	}*/
+
+	.img-sec2 img{
+		width: 200px;
+	}
+
+	#sec3Img {
+		width: 100%;
+	}
+
+	#puppy, .text-sec4, #pie, #buy{
+		display: block;
+  margin-left: auto;
+  margin-right: auto;
+	}
+.sd-img {
+	width: 10%;
 }
-@media only screen and (min-device-width: 375px) and  (max-device-width: 424px) {
-	.sec-1 {
-    padding-top: 25%;
-	}
-	.wel-pup {
-		font-size: 25px;
-	}
-	.wel-para {
-    font-size: 15px;
-   
-	}
-	.btn-p {
-    padding: 3%;
-	}
-	.so-text {
-    font-size: 15px;
-	}
-	.wel-btn {
-		    padding-top: 5px;
-	}
-	/*.footer-icon {
-		padding: 9px;
-		margin-right: 0%;	
-	}*/
-	.card-footer{
-      margin-top: 10px;
-      text-align: center;
-	}
-	.foot-card{
-        padding-top: 70px;
-	}
-	.footer-icon {
-    padding: 25px;
-	}
-	/*.discord {
-		width:10%;
-	}*/
-	/*.mobile-res {
-    padding-top: 10%;
-	}*/
-	.sd-img {
-    width: 20%;
-	}
-	::placeholder { 
-  
-		font-size: 25px;
-	}
-	.dot1 {
-			margin-left: -30px;
-	}
-	.dot2 {
-			margin-left: -30px;
-	}
-	.dot3 {
-			margin-left: -30px;
-	}
-	.dot4 {
-			margin-left: -30px;
-	}
-	.flag_stand {
-		margin-left: -24%;
-	}
+.imgbot, .imgtop{
+	display: none;
 }
 
-@media only screen and (min-device-width: 425px) and  (max-device-width: 480px) {
-		.flag_stand {
-		margin-left: -21%;
-		}
-		.dot1 {
-			margin-left: -30px;
-		}
-		.dot2 {
-				margin-left: -30px;
-		}
-		.dot3 {
-				margin-left: -30px;
-		}
-		.dot4 {
-				margin-left: -30px;
-		}
-	.sd-img {
-    width: 20%;
-	}
-
-}
-@media only screen and (min-device-width: 481px) and (max-device-width: 768px)  {
-
-	.fot-text{
-		text-align: center;
-	}
-	
-	.sec-1 {
-    padding-top: 20%;
-	}
-	.text-sec4 {
-		    padding: 0px;
-	}
-
-	.copyright-text, .privacy {
-		text-align: center;
-		float: none;
-	}
-	.card-footer{
-      padding-top: 10px;
-      text-align: center;
-	}
-	.foot-card{
-        padding-top: 70px;
-	}
-	.footer-icon {
-    padding: 25px;
-	/*margin-right: 2%;*/
-	}
-
-	::placeholder { 
-  
-		font-size: 30px;
-	}
-	.stick {
-		margin-left: -58px;
-	}
-	.flag_stand {
-		margin-left: -250%;
-	}
-}
-@media(min-width: 1024px) and (max-width: 1400px){
-	
-	
-	.footer-icon {
-		padding: 15px;
-	    margin-right: 5%;
-	
-	}
-	.dot{
-		left:-19%
-	}
-	.discord {
-		width:4%;
-	}
-	.dot1 {
-			margin-left: 0px;
-	}
-	.dot2 {
-			margin-left: -115px;
-	}
-	.dot3 {
-			margin-left: -115px;
-	}
-	.dot4 {
-			margin-left: -115px;
-	}
-	.flag_stand {
-		    margin-left: -160%;
-	}
+.fot-text{
+	font-size: 20px;
+	text-align: center;
 }
 
-
-@media(min-width:320px) and (max-width:1023px){
-
-	.fot-text{
-		text-align: center;
-	}
-
-	.htb-text {
-  
-    word-break: break-word;
+.footer-icon {
+	margin-right: 2%;	
 }
-.sticky {
-   
-    z-index: 99;
+ #footer-text {
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
-.text-sec4 {
-    padding: 3px;
-    position: relative;
-    margin: 37px 0 0 0;
-}
-
-
-.dot {
-    left: -20.9%;
-}
-.wrapper-img {
-  
-    margin: -20px 0 0;
-}
-
-/* .mymg{height:480px!important} */
-}
-
-@media(min-width:320px) and (max-width:768px)
-{	
-	.fot-text{
-		text-align: center;
-	}
-
-	.set-fc {
-   
-    font-size: 2rem;
-    text-align: center;
+.copyright-text, .privacy{
+text-align: center;
+float: none;
 }
 }
 
