--- a/css/custom.css
+++ b/css/custom.css
@@ -759,6 +759,39 @@ text-align: center;
     width: 55%;
 }
 
+/*.custom-container{
+	margin: 0px 0px;
+}*/
+
+.ppd {
+	font-size: 12px;
+	padding: 8px 22px;
+} 
+
+.set-fc {
+  width: 100%;
+  padding: 15px;
+  font-size: 12px;
+}
+
+.con_add {
+	width: 100%;
+}
+
+.copy_btn {
+	font-size: 20px;
+	height: 30%;
+}
+
+.gra-text-p {
+	font-size: 15px;
+}
+
+.ora-text {
+	font-size: 20px;
+	line-height: 33px;
+}
+
 /*#welcol{
 	text-align: center;
 }
@@ -803,6 +836,7 @@ text-align: center;
 
    .seen-pup {
    	font-size: 30px;
+
    }
 
 #hide1{
@@ -829,6 +863,20 @@ text-align: center;
   margin-right: auto;
 	}
 
+.text-sec4 {
+	height: 320px;
+}
+
+.faq .faq-list .icon-show {
+	font-size: 20px;
+
+}	
+
+.faqimg {
+	height: 25px;
+	padding-right: 1px;
+}
+
 #buy {
 	height: 400px;
 }
@@ -845,7 +893,10 @@ text-align: center;
 }
 
 .footer-icon {
-	margin-right: 2%;	
+	margin-right: 3%;
+	padding: 5px;	
+	padding-top: 15px;
+    padding-bottom: 8px;
 }
  #footer-text {
 	display: block;
@@ -855,6 +906,7 @@ text-align: center;
 .copyright-text, .privacy{
 text-align: center;
 float: none;
+font-size: 10px;
 }
 
 .container {
@@ -876,6 +928,18 @@ float: none;
     margin-right: 20px;
 }
 
+.foot-card{
+	margin-top: 20px;
+}
+
+.dwn-wp {
+	font-size: 15px;
+}
+
+.bor-bt {
+	border-bottom: none;
+}
+
 /*.set-fc {
 	padding: 22px 12px;
 	font-size: 10px;
@@ -884,7 +948,7 @@ float: none;
 .ppd {
 	padding-right: 15px 28px;
 	font-size: 10px;
-}*/
-
+}
+*/
 }
 
