--- a/css/custom.css
+++ b/css/custom.css
@@ -940,6 +940,10 @@ font-size: 10px;
 	border-bottom: none;
 }
 
+#connectus{
+	text-align: center;
+}
+
 /*.set-fc {
 	padding: 22px 12px;
 	font-size: 10px;
