--- a/css/custom.css
+++ b/css/custom.css
@@ -855,6 +855,7 @@ text-align: center;
 
 	#sec3Img {
 		width: 100%;
+		height: 200px;
 	}
 
 	#puppy, .text-sec4, #pie, #buy{
@@ -926,6 +927,10 @@ font-size: 10px;
 #seen {
 	margin-left: 20px;
     margin-right: 20px;
+}
+
+#pie {
+	height: 300px;
 }
 
 .foot-card{
