--- a/css/custom.css
+++ b/css/custom.css
@@ -185,7 +185,7 @@ li
 .wel-pup 
 {
 	font-size: 60px;
-	line-height: 64px;
+	/*line-height: 64px;*/
 	letter-spacing: 0.14em;
     color:#FFFFFF;
 	/*font-family: a Abrushow;*/
@@ -417,8 +417,9 @@ padding: 16px 28px;
 }
 .sd-img
 {
-	width:60%;
+	width:30%;
 	float: right;
+	height: 50px;
 }
 
 .pb-3 
@@ -736,9 +737,10 @@ border-radius: 24px;
 	border-radius: 20px;
 	font-family: Lato;
 letter-spacing: 0.05em;
+width: 450px;
 }
 .card-text li{
- padding: 8px;
+ padding: 5px;
 }
 
 .card-text{
@@ -765,6 +767,10 @@ text-align: center;
   transform: rotate(270deg);
   width: 210px;
 }
+
+#pie {
+		height: 300px;
+	}
 
 
 /*-----------------------------Responsive Css------------------*/
@@ -811,6 +817,8 @@ text-align: center;
 
 .gra-text-p {
 	font-size: 15px;
+	line-height: 24px;
+    margin-top: 5%;
 }
 
 .ora-text {
@@ -883,15 +891,24 @@ text-align: center;
 	}
 
 	#sec3Img {
-		width: 100%;
+		/*width: 100%;*/
 		height: 200px;
+		display: block;
+  margin-left: auto;
+  margin-right: auto;
 	}
+
 
 	#puppy, .text-sec4, #pie, #buy{
 		display: block;
   margin-left: auto;
   margin-right: auto;
 	}
+
+#card1, #card2, #card3, #card4
+{
+	width: 100%;
+}
 
 .text-sec4 {
 	height: 320px;
@@ -911,7 +928,9 @@ text-align: center;
 	height: 400px;
 }
 .sd-img {
-	width: 10%;
+	width: 15%;
+	float: left;
+	margin-top: 5%;
 }
 .imgbot, .imgtop{
 	display: none;
@@ -923,9 +942,9 @@ text-align: center;
 }
 
 .footer-icon {
-	margin-right: 3%;
+	/*margin-right: 3%;
 	padding: 5px;	
-	padding-top: 15px;
+	padding-top: 1*/5px;
     padding-bottom: 8px;
 }
  #footer-text {
