--- a/css/custom.css
+++ b/css/custom.css
@@ -1009,6 +1009,14 @@ font-size: 10px;
 	text-align: center;
 }
 
+#ph4 {
+	width: 80%;
+}
+
+#threeper {
+	padding-top: 3%;
+}
+
 /*.set-fc {
 	padding: 22px 12px;
 	font-size: 10px;
