alert, disc chngs

--- a/css/custom.css
+++ b/css/custom.css
@@ -210,7 +210,7 @@ li
 }
 .wel-para1
 {
-	color: #F95192;
+	color: #FA9B27;
 	font-family: Lato;
 	font-style: italic;
 	font-weight: bold;
@@ -402,7 +402,7 @@ padding: 16px 28px;
 
 #disc_p p{
 	font-family: Lato;
-	font-size: 15px;
+	font-size: 12px;
 	}
 
 .gra-text, .htb-text 
@@ -487,7 +487,7 @@ padding: 16px 28px;
 }
 .footer-icon 
 {
-	padding: 18px;
+	/*padding: 18px;*/
     border-radius: 10px;
     /*background: linear-gradient(to right, #ff9933 0%, #ff99ff 100%);*/
     background: #0069FF;
@@ -862,6 +862,10 @@ text-align: center;
     width: 55%;
 }
 
+.alert {
+	font-size: 12px;
+}
+
 /*.custom-container{
 	margin: 0px 0px;
 }*/
@@ -926,6 +930,10 @@ text-align: center;
 	.wel-para, .wel-para1, .wel-btn {
 		text-align: center;
 		font-size: 15px;
+	}
+
+	.wel-btn {
+		padding-top: 2%;
 	}
 
 	.img-sec2 
