--- a/css/custom.css
+++ b/css/custom.css
@@ -1026,8 +1026,10 @@ text-align: center;
 .footer-icon {
 	/*margin-right: 3%;
 	padding: 5px;	
-	padding-top: 1*/5px;
+	padding-top: 1*/
     padding-bottom: 8px;
+    margin-left: 3%;
+    margin-right: 3%;
 }
  #footer-text {
 	display: block;
