--- a/css/custom.css
+++ b/css/custom.css
@@ -39,6 +39,11 @@ body
     z-index: 99999;
 }*/
 
+.pcs {
+	height: 53px;
+	margin-left: -10%;
+}
+
 .navbar
 {
 	border-radius: 0px !important;
@@ -191,7 +196,7 @@ li
 {
     color: #FA9B27;
     background-color: #F5F5F5;
-    font-family: a Abrushow;
+    font-family: Kavoon;
 	font-style: normal;
 	font-weight: normal;
 	line-height: 43px;
@@ -229,7 +234,7 @@ li
 	font-family: Lato;
 	font-style: italic;
 	font-weight: bold;
-	font-size: 24px;
+	font-size: 18px;
 	line-height: 30px;
 }
 .btn-p 
@@ -972,9 +977,14 @@ text-align: center;
 		font-size: 25px;
 	}
 
-	.wel-para, .wel-para1, .wel-btn {
+	.wel-para, .wel-btn {
 		text-align: center;
 		font-size: 15px;
+	}
+
+	.wel-para1 {
+		text-align: center;
+		font-size: 12px;
 	}
 
 	.wel-btn {
@@ -1050,6 +1060,12 @@ text-align: center;
 	height: 25px;
 	padding-right: 1px;
 }
+
+.pcs {
+	
+	margin-left: 0%;
+}
+
 
 #buy {
 	height: 400px;
