--- a/css/custom.css
+++ b/css/custom.css
@@ -116,6 +116,7 @@ li
 
 .sec-1 
  {
+ 	/*margin-top: 30%;*/
 	padding-top: 10%;
     padding-bottom: 6%;
 	/*background-image:url('../images/BannerCop.png');*/
@@ -903,8 +904,19 @@ text-align: center;
 }
 
 .alert {
-	font-size: 12px;
+	font-size: 10px;
+	padding: 6px;
+	height: 50px;
 }
+
+.alert-dismissible {
+  padding-right: 35px;
+}  
+
+.sec-1{
+	padding-top: 17%;
+}
+
 
 /*.custom-container{
 	margin: 0px 0px;
@@ -1012,6 +1024,12 @@ text-align: center;
    	font-size: 30px;
 
    }
+
+
+
+/*.sec-1  {
+ 	margin-top: 30%;
+ }*/
 
 #hide1{
 	display: block;
@@ -1154,6 +1172,7 @@ font-size: 10px;
     margin-left: 25%;
     margin-bottom: 3%;
 }
+
 
 .card-footer {
 	margin-left: 8%;
